# EPL_app

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  ADVANCED_ANALYTICS_IMPLEMENTATION.md  BEST_PRACTICES_APPLIED.md  CICD_SETUP_GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  DATA_AND_ML_METHODOLOGY.md  DEPLOYMENT_BEST_PRACTICES_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.ai  Dockerfile.gemini  Dockerfile.lightweight  Dockerfile.production  FIREBASE_DEPLOYMENT_GUIDE.md  FRONTEND_UPGRADE_COMPLETE.md  GITHUB_SECRETS_SETUP.md  ISSUES_FIXED.md  LOCAL_SETUP.md  PAYSTACK_SETUP_GUIDE.md  PLAYWRIGHT_MCP_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_SUMMARY.md  REFACTORING_PLAN.md  SPORTMONKS_SETUP.md  TESTING_COMPLETE.md  TESTING_REPORT.md  api_ai_enhanced.py  api_enhanced_final.py  api_lightweight.py  api_production.py  (+35 more)
.claude/skills/: cloud-run-deploy.md  football-api-management.md  react-firebase-deploy.md
.firebase/: hosting.ZnJvbnRlbmQvb3V0.cache
.github/workflows/: build-android.yml  deploy-backend.yml  deploy-frontend.yml  test-and-lint.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
app/: config.py  main.py
app/api/: fpl_team.py  payments.py  players.py  predictions.py  teams.py  users.py
app/auth/: firebase_auth.py
app/schemas/: common.py
app/services/: data_service.py  gemini_service.py  prediction_service.py
app/utils/: cache.py  logging.py
archive/: README.md
archive/old_api_files/: api_production.py  api_with_ai.py  enhanced_api_production.py  main_old.py  simple_api.py
archive/old_integrations/: paystack_integration.py  sportmonks_integration.py
archive/old_models/: hybrid_forecaster_enhanced.py
archive/old_requirements/: requirements_ai_simple.txt  requirements_firebase.txt  requirements_local.txt  requirements_production.txt
archive/old_scripts/: performance_utils.py
archive/old_tests/: test_full_system.py  test_summary.py
backend/: Dockerfile  README.md  hybrid_forecaster.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  payments.py  players.py  predictions.py  teams.py
backend/app/schemas/: __init__.py  common.py  player.py  team.py
backend/app/services/: __init__.py  data_service.py  prediction_service.py  team_service.py
backend/app/utils/: __init__.py  cache.py  logging.py
backend/src/api/routes/: auth_routes.py
backend/src/auth/: auth_manager.py
backend/src/database/: models.py
backend/tests/: conftest.py  test_main.py
backend/tests/test_api/: test_predictions.py
backend/tests/test_services/: test_data_service.py
docs/: QUICK_START.md  README.md  move_old_docs.sh
docs/design-reports/: design-audit-epl-prediction-app-2026-04-27.md
frontend/: .env.production  .firebaserc  .gcloudignore  Dockerfile  README.md  UPGRADE_GUIDE.md  firebase.json  index.html  manifest.json  next.config.js  nginx.conf  package.json  setup.md  sw.js  tailwind.config.js
frontend/.firebase/: hosting.LmZpcmViYXNlL2VwbC1wcmVkaWN0aW9uLWFwcC9ob3N0aW5n.cache  hosting.b3V0.cache
frontend/app/: epl-theme.css  globals.css  layout.js  page-epl.js  page.js
frontend/components/: ApiStatus.js  GameweekInfo.js  HybridForecaster.js  LiveScores.js  LiveScoresEPL.js  MLMethodology.js  PaymentModal.js  PlayerAnalysis.js  PlayerAnalysisEnhanced.js  PlayerCard.js  PlayerPredictions.js  PlayerPredictionsEPL.js  PredictionTracker.js  SquadOptimizer.js
frontend/lib/: api.js
functions/: api_production.py  cli.py  enhanced_api_production.py  index.js  local_demo.py  main.py  multi_model_predictor.py  news_sentiment_analyzer.py  prediction_scheduler.py  requirements.txt  security_utils.py
ios/App/: Podfile
mobile/: App.tsx  BUILD.md  capacitor.config.ts  package.json
models/: pytorch_model.pth  scaler.pkl  training_history.pkl
playwright-report/: index.html
src/: prediction_engine.py  pytorch_prediction_engine.py  scheduler.py
src/analysis/: injury_tracker.py  price_monitor.py  sentiment_analyzer.py
src/api/: local_main.py  main.py  pytorch_main.py
src/data/: external_datasets.py  fpl_api.py  live_data_manager.py
src/database/: local_db.py
src/models/: cnn_predictor.py  pytorch_cnn_predictor.py  (+2 more)
tests/: conftest.py  design-research.spec.js  production-site-test.spec.js  test_api.py  test_cnn_predictor.py  test_endpoint_compat.py  test_error_handling.py  test_fpl_api.py  test_integration.py  test_team_optimizer.py  ui-design-analysis.spec.js  ui-improvement-tests.spec.js
web/: package.json
(+39 files in other folders)
