[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-ai-pro"
version = "3.0.0"
description = "Fantasy Premier League AI prediction system with xG/xA analytics"
authors = [
    {name = "EPL AI Pro Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["fantasy", "premier-league", "fpl", "machine-learning", "predictions"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",

    # HTTP clients
    "httpx>=0.28.0,<1.0.0",
    "aiohttp>=3.11.0,<4.0.0",
    "requests>=2.32.0,<3.0.0",

    # Data processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",  # Support both NumPy 1.x and 2.x

    # Machine Learning
    "scikit-learn>=1.5.0,<2.0.0",

    # Caching
    "cachetools>=5.5.0,<6.0.0",

    # Utilities
    "python-dotenv>=1.0.1,<2.0.0",
    "certifi>=2024.8.30",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "black>=24.10.0,<25.0.0",
    "ruff>=0.7.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

# Machine Learning extras
ml = [
    "torch>=2.5.0,<3.0.0; sys_platform != 'darwin'",
    "torch>=2.5.0,<3.0.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tensorflow>=2.18.0,<3.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
]

# Cloud deployment
cloud = [
    "firebase-admin>=6.6.0,<7.0.0",
    "firebase-functions>=0.4.0,<1.0.0",
    "a2wsgi>=1.10.0,<2.0.0",
    "mangum>=0.18.0,<1.0.0",
]

# Database support (optional)
db = [
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "redis>=5.2.0,<6.0.0",
]

# Payment integration
payments = [
    "stripe>=11.2.0,<12.0.0",  # Can add PayStack SDK here
]

# Sentiment analysis
sentiment = [
    "textblob>=0.18.0,<1.0.0",
    "transformers>=4.47.0,<5.0.0",
]

# All extras combined
all = [
    "fpl-ai-pro[dev,ml,cloud,db,payments,sentiment]",
]

[project.urls]
Homepage = "https://github.com/Logic06183/EPL_app"
Repository = "https://github.com/Logic06183/EPL_app"
Documentation = "https://github.com/Logic06183/EPL_app#readme"
Issues = "https://github.com/Logic06183/EPL_app/issues"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "torch.*",
    "tensorflow.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=html --cov-report=term"
testpaths = [
    "tests",
]
pythonpath = ["."]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
